<resources>
    <string name="app_name">FamilyProduction</string>
    <string name="family_food">Family food</string>
    <string name="food">food</string>
    <string name="register">register</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="email">Email</string>
    <string name="phone">phone</string>
    <string name="as_family">Family</string>
    <string name="customer">Customer</string>
    <string name="search">Search</string>
    <string name="cart">My cart</string>
    <string name="food_orders">food orders</string>
    <string name="search_hint">Search for meals</string>
    <string name="recent_items">Recent items</string>
    <string name="foods_available">Available Meals</string>
    <string name="description">Description</string>
    <string name="categories">Categories</string>
    <string name="enter_quantity">Quantity : </string>
    <string name="total_price">"Total : "</string>
    <string name="add">add</string>
    <string name="cancel">cancel</string>
    <string name="save">Save</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total Price :</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="edit_quantity">"Edit Quantity : "</string>
    <string name="confirmation_dialog">Confirmation dialog</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure that you want to delete this item from the cart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="order_id">Order Id</string>
    <string name="total_price_title">Total price</string>
    <string name="our_meals">Our meals</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="order_details">Order details</string>
    <string name="order_location">Order Location</string>
    <string name="record">Record</string>
    <string name="price_unit">SAR</string>
    <string name="search_title">"searching for : "</string>
    <string name="add_new_food">Add new Meal</string>
    <string name="food_name">Name</string>
    <string name="meal_name">meal name</string>
    <string name="upload_image">Upload image</string>
    <string name="accepted_deals">Accepted deals</string>
    <string name="my_orders">My orders</string>

    <string name="status_new">NEW</string>
    <string name="status_rejected">REJECTED</string>
    <string name="status_processing">PROCESSING</string>
    <string name="status_completed">COMPLETED</string>
</resources>