<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MyCartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@color/colorAccentLight"
            android:weightSum="6">
            <TextView
                android:text="@string/item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_weight="1.5"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:layout_weight="1.5"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_items_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:listitem="@layout/cart_list_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <TextView
            android:id="@+id/total_price_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/total"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/confirm_order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/confirm_order"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:textColor="@color/white"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
