<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/food_background"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="42sp"
            android:text="@string/register"
            android:textColor="@android:color/white"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/user_name"
                android:importantForAutofill="no"
                android:backgroundTint="#00000000"
                android:textCursorDrawable="@drawable/cursor"
                />
        </FrameLayout>



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:backgroundTint="@color/transparent"
                android:textCursorDrawable="@drawable/cursor"/>
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:backgroundTint="@color/transparent"
                android:textCursorDrawable="@drawable/cursor"/>

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:backgroundTint="@color/transparent"
                android:textCursorDrawable="@drawable/cursor"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone"
                android:importantForAutofill="no"
                android:backgroundTint="@color/transparent"
                android:textCursorDrawable="@drawable/cursor"/>
        </FrameLayout>

        <RadioGroup
            android:id="@+id/account_type_chooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/family_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/as_family"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                android:layout_marginEnd="16dp"/>

            <RadioButton
                android:id="@+id/customer_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"/>
        </RadioGroup>


        <Button
            android:id="@+id/register_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"/>



    </LinearLayout>

</RelativeLayout>